--- a/style.css
+++ b/style.css
@@ -7,34 +7,29 @@
     background-color: #FBFFF1;
 }
 
-header {
-    
-}
+
 
 nav {
     display:flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
 }
-
+nav h1{
+   display: flex;
+   align-items: center;
+}
 ul{
     display: flex;
     align-items: center;
     gap: 2rem;
 }
 
-li{
-   
+#wcsLogo{
+    width: 10%;
 }
 
-nav h1 {
-    margin-top: 2rem;
-}
 
-body {
-
-}
-
-body p {
-
+.slider__nav{
+display : flex;
+    
 }
