--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ div h2{
 
 /* MAIN */
 /* SEARCH BAR */
-.search-bar {
+#search-bar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -161,23 +161,23 @@ div h2{
     margin-right: auto;
     margin-top: 5rem;
 }
-.search-bar input[type=text] {
+#search-bar input[type=text] {
     display: flex;
     border: none;
     background-color: transparent;
     width: 80%;
 }
 
-.search-bar input:focus {
+#search-bar input:focus {
     outline: none;
 }
-.search-bar button {
+#search-bar button {
     width:2rem;
     border: none;
     background-color: transparent
 }
 
-.search-bar img {
+#search-bar img {
     display: flex;
     justify-content: flex-end;
     height: 75%;
@@ -185,6 +185,8 @@ div h2{
     background-color: transparent;
     margin: auto;
 }
+
+
 /* CONTAINER */
 section {
     margin-top: 3rem;
