--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     
 }
 * {
-    font-family:'Open Sans';
+    font-family:'Open Sans', sans-serif;
     text-decoration: none;
     list-style: none;
     padding: 0px;
@@ -40,17 +40,19 @@ nav {
     
     
 }
-
+nav a{
+    
+}
 #wcsLogo{
-    height: 10%;
-    width: 10%;
-    margin-right: 2%;
+width: 50%;
+margin-left: 40%;
+
 }
 .active {
     color: #227C9D;
-
-
   }
+
+
 ul {
     display: flex;
     align-items: center;
