--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 :root{
-    
-    --primarycolor:#d319e769;
+
+    --primarycolor:#ea3efd86;
     --secondarycolor:rgb(240, 240, 240);
-    
+    --navbarstickycolor: #a306b6;
+    --footercolor:#a306b6;
 }
 * {
-    font-family:'Open Sans', sans-serif;
+
     text-decoration: none;
     list-style: none;
     padding: 0px;
@@ -19,17 +20,55 @@ html {
 
 
 body{
-    background: linear-gradient(30deg, var(--secondarycolor),var(--primarycolor) ); 
+    background-color: #fbfff1;
+/*     background: linear-gradient(30deg, var(--secondarycolor),var(--primarycolor) );  */
     opacity: 1;
+    font-family: 'Open Sans', sans-serif;
+    
 }
 
 
 
 /* NAVBAR */
 
+
+header {
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transition: 0.6s;
+    z-index: 100;
+
+}
+.active {
+    color: #227C9D;
+
+  }
+
+header.sticky {
+    background: var(--navbarstickycolor);
+    color: #FBFFF1;
+
+}
+
+header.sticky a {
+    color: #FBFFF1;
+}
+
+header.wcslogo {
+    position: relative;
+    transition: 0.6s;
+
+
+}
 nav {
     display:flex;
     justify-content: space-between;
+    width: 100%;
+    
 
 }
 
@@ -41,50 +80,49 @@ nav {
 
 
 }
-nav a{
-    
-}
 #wcsLogo{
 width: 50%;
 margin-left: 40%;
 
 
 }
-.active {
-    color: #227C9D;
 
-  }
 
 
 ul {
+    position: relative;
     display: flex;
     align-items: center;
     gap: 4rem;
     margin-left: 2%;
     
+
 }
 
 li {
+    position:relative;
     font-weight: bold;
-
-}
-
-nav ul a {
-    color: #000000;
-
     
+
 }
 
+nav ul li a {
+    position: relative;
+    color: #000000;
+    transition: 0.6s;
+    
+
+}
 
 div h1{
-
+    margin-left: 5rem;
     font-size: 32px;
-    font-family: 'Open Sans extrabold';
+    font-family: 'Open Sans';
 
 }
 div h2{
-   
-    font-family: 'Open Sans extrabold';
+    margin-left: 5rem;
+    font-family: 'Open Sans';
 
 }
 /* CAROUSEL */
@@ -92,7 +130,7 @@ div h2{
 .slider {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2rem;
+    margin-top: 10%;
     height: 180px;
     max-width: 180px;
     position: relative;
@@ -157,8 +195,6 @@ div h2{
     width: 100%;
 }
 
-
-
 /* MAIN */
 
 
@@ -217,13 +253,56 @@ div h2{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.85); 
-    display: none;
+    background-color: rgba(255, 255, 255, 0.85);
+    padding-top: 100px;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
+    display: none;
+    z-index: 1000;
+}
+
+
+.overlay-content {
+    position: relative;
+    background-color: #feeaff;
+    margin: auto;
+    padding: 0;
+    border-radius: 10px;
+    margin-top: 10%;
+    width: 50%;
+    height: 45%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
 
 }
 
+
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+ }
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-right: 1%;
+  }
+  
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 
 section {
@@ -257,6 +336,79 @@ img.media-imgs:hover{
     align-items: center;
     margin-left: 2rem;
 }
+
+/* CONTACT */
+
+section.button-contact {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5%;
+    
+}
+.close-button {
+    cursor: pointer;
+    border:none;
+    outline: none;
+    background:none;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.contact {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 2px solid black;
+    border-radius: 20px;
+    z-index: 1001;
+    background-color: white;
+    width: 500px;
+    max-width: 80%;
+}
+
+.contact.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.contact-header {
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+.contact-titre {
+    
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.contact-body {
+    padding: 10px 15px;
+}
+
+#overlay-contact{
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:rgba(255, 255, 255, 0.85);
+    pointer-events: none;
+    display: none;
+}
+
+#overlay-contact.active-contact {
+    opacity: 1;
+    pointer-events: all;
+}
+
+
+
 /* FOOTER */
 footer {
     display: flex;
@@ -265,10 +417,9 @@ footer {
     bottom: 0;
     width: 100%;
     height: 2rem;
-    background-color: #a306b6;
+    background-color: var(--footercolor);
     font-weight: bold;
     position: fixed;
     z-index: 10;
-
-    
+    color: #FBFFF1;
 }
