--- a/style.css
+++ b/style.css
@@ -43,10 +43,7 @@ header {
     z-index: 100;
 
 }
-.active {
-    color: #227C9D;
 
-  }
 
 header.sticky {
     background: var(--navbarstickycolor);
@@ -63,7 +60,12 @@ header.wcslogo {
     transition: 0.6s;
 
 
+    
 }
+.active {
+    color: #227C9D;
+
+  }
 nav {
     display:flex;
     justify-content: space-between;
@@ -131,19 +133,18 @@ div h2{
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
-    height: 180px;
-    max-width: 180px;
+    height: 20%;
+    max-width: 90%;
     position: relative;
-
 }
 
 .slider__nav__button__next {
-    right: 10px;
+    right: 40px;
 
 }
 
 .slider__nav__button__prev {
-    left: 10px;  
+    left: 40px;  
   
 }
 
@@ -169,8 +170,8 @@ div h2{
 
 
 .slider__nav__button svg {
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
 }
 
 .slider__nav__button svg path{
@@ -188,11 +189,14 @@ div h2{
 .slider__content__item {
     height: 100%;
     min-width: 100%;
+
 }
 
 .slider__content__item img {
     height: 100%;
     width: 100%;
+    border-radius: 5px;
+
 }
 
 /* MAIN */
